@@ -336,6 +336,13 @@ $build->{config}{__templates}         = [
                       "moderate_confirm.tt",
                       "moderate_password_wrong.tt",
                       "navbar.tt",
+                      "navbar_help.tt",
+                      "navbar_home_link.tt",
+                      "navbar_options.tt",
+                      "navbar_revision_info.tt",
+                      "navbar_search.tt",
+                      "navbar_this_page.tt",
+                      "navbar_tools.tt",
                       "needing_moderation.tt",
                       "newpage.tt",
                       "node.tt",
