@@ -1,0 +1,15 @@
+[% UNLESS not_editable %]
+  <div class="navbar_revision">
+    [% IF current %]
+      <div id="navbar_version">Revision [% version %].</div>
+      <div id="navbar_last_edited">Last edited [% last_modified %].</div>
+    [% ELSE %]
+      <div id="navbar_this_revision_info">
+        This is revision [% version %] (as of [% last_modified %]).
+      </div>
+      <div id="navbar_current_version_link">
+        <a href="[% cgi_url %]?[% node_param %]">View current version.</a>
+      </div>
+    [% END %]
+  </div>
+[% END %]
